--- a/public/500.html
+++ b/public/500.html
@@ -1,26 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
-</head>
+    <title>mybitsafe</title>
+  <link href="/stylesheets/style.css?1311125130" media="screen" rel="stylesheet" type="text/css" />
+  <script src="/javascripts/prototype.js?1310179418" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1310179418" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1310179418" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1310179418" type="text/javascript"></script>
 
+<script src="/javascripts/rails.js?1310179418" type="text/javascript"></script>
+<script src="/javascripts/application.js?1310179418" type="text/javascript"></script>
+  <meta name="csrf-param" content="authenticity_token"/>
+<meta name="csrf-token" content="TzN8VV0H13Lp+oHypiCBEPwWKX+vNsPLdiHeE3ca6oE="/>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-24514071-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+</head>
 <body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
-  </div>
+
+<div class='header'>
+<h1><a href="/">my.bit.safe</a></h1>
+</div>
+
+<div class='sidebar'>
+
+<div class='sidebar_menu'>
+
+</div>
+
+<div class='body'>
+
+<h2>500 - Internal Server Error</h2>
+
+<p>Something has gone horribly wrong...</p>
+
+<p>The site administrator has received an automated email and will look into the problem.  If you would like to contact the administrator about this error, please contact <em>support at mybitsafe dot com</em>.</p>
+
+</div>
+
+<div class='footer'>
+<a href="/fees">Fee Schedule</a>
+|
+
+<a href="/faq">FAQ</a>
+|
+<a href="/">About</a>
+|
+<a href="mailto:support@mybitsafe.com">Contact</a>
+|
+<a href="/terms_of_service">Terms of Service</a>
+</div>
+
 </body>
 </html>
